deployments/k8s/default-http-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend-service
  namespace: developers-space
spec:
  selector:
    app: node-hello-world
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
